--- a/index.html
+++ b/index.html
@@ -4,21 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto pessoal</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
 
-    <main>
+    <header>
         <h1>Victor Henrique</h1>
-        <nav>
-            <ul>
-                <li><a href="#">1</a></li>
-                <li><a href="#">2</a></li>
-                <li><a href="#">3</a></li>
-                <li><a href="#">4</a></li>
+        <span id="burger" class="material-symbols-outlined" onclick="clickMenu()"> density_medium  </span>
+        <menu id="itens">
+            <ul class="listah">
+                <li><a href="#">Início</a></li>
+                <li><a href="#">Sobre</a></li>
+                <li><a href="#">Projetos</a></li>
+                <li><a href="#">Contato</a></li>
             </ul>
-        </nav>
-    </main>
-    
+        </menu>
+    </header>
+
+
+    <script>
+        function clickMenu() {
+        if (itens.style.display == 'block') {
+            itens.style.display = 'none'
+        } else {
+            itens.style.display = "block"
+        }
+        }
+    </script>
 </body>
 </html>
