--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>Projeto pessoal</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/media-query.css">
 </head>
-<body>
+<body onresize="mudouTamanho()">
 
     <header>
         <h1>Victor Henrique</h1>
@@ -22,8 +23,51 @@
         </menu>
     </header>
 
+    <main>
+        <section class="sobre">
+            <article>
+                <div class="imagem">
+            
+                </div>
+                <h2>
+                    Desenvolvedor Front-End
+                </h2>
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi perspiciatis accusamus vero earum unde, ipsam fugiat. Qui nihil, provident iure laboriosam enim officiis reiciendis expedita vitae, facere ea laudantium dolorem.
+                </p>
+            </article>
+        </section>
+
+        <section class="conteudo">
+            <article>
+                <h2>
+                    Meus projetos
+                </h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati porro natus facere, eum facilis temporibus possimus reiciendis quo, tempore nesciunt libero minus molestias maxime quia illo nihil? Inventore, quasi repellendus.
+                </p>
+                <div class="icons">
+                    <img src="imagens/2510728.webp" alt="html">
+                    <span class="material-symbols-outlined">html</span>
+                </div>
+                <div class="icons"> 
+                    <img src="imagens/2284638.webp" alt="css">   
+                    <span class="material-symbols-outlined">css</span>
+                </div>
+            </article>
+        </section>
+    </main>
 
     <script>
+
+        function mudouTamanho() {
+            if (window.innerWidth >= 768) {
+                itens.style.display = 'block'
+            }   else {
+                itens.style.display = 'none'
+            }
+        }
+
         function clickMenu() {
         if (itens.style.display == 'block') {
             itens.style.display = 'none'
